--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-numpy
-scipy
-matplotlib
-pandas
-scikit-learn>=0.23.2
+numpy == 1.26.4
+scipy == 1.13.1
+matplotlib == 3.7.1
+pandas == 2.1.4
+scikit-learn == 1.3.2
+pandas_ta == 0.3.14b0
+numba == 0.60.0
